--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,17 @@
     "minimum-stability": "dev",
     "require": {
         "php":">=5.4.0",
-        "yiisoft/yii2": ">=2.0.5"
+        "yiisoft/yii2": ">=2.0.5",
+        "yiisoft/yii2-redis": "~2.0.0",
+        "ladamalina/yii2-smsc": "@dev",
+        "develandoo/yii2-push-notification": "^1.0"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*"
     },
     "autoload": {
         "psr-4": {
-            "mirocow\\notification\\": "./src"
+            "mirocow\\notification\\": "./"
         }
     }
 }
