1) Create log table for save status from provider 2) Add controller for use with mirocow/yii2-queue 3) Add layouts into email provider 4) Clean old code

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,9 @@
     "require-dev": {
         "yiisoft/yii2-codeception": "*"
     },
+    "suggest": {
+        "mirocow/yii2-queue": "to use Queue server",
+    },
     "autoload": {
         "psr-4": {
             "mirocow\\notification\\": "./"
